--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Sales System project - built in Python
-logo: /gui-tk.JPG
-description: Sales System for the furniture company. This sales system is for customer use, not company use. For the purposes of this project, the company only has one customer.
+logo: gui-tk.JPG
+description: Sales System for the furniture company
 show_downloads: true
 google_analytics:
 theme: jekyll-theme-minimal
