--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-title: Sales System project - built in Python
+title: Sales System
 logo: gui-tk.JPG
-description: Sales System for the furniture company
+description:  Sales System - built in Python.
 show_downloads: true
 google_analytics:
 theme: jekyll-theme-minimal
