--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Sales System
 logo: gui-tk.JPG
-description:  Sales System - built in Python.
+description:  Sales System - built in Python. <br> Test <br> Test
 show_downloads: true
 google_analytics:
 theme: jekyll-theme-minimal
