--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Sales System
 logo: gui-tk.JPG
-description:  Sales System - built in Python. <br> Test <br> Test
-show_downloads: true
+description:  Sales System - built in Python. <br> <>brInstructions:<br>1. Select an item from the Furniture Catalogue<br>2. Click <Add to basket> button to add 1 item to the basket<br>3. To remove 1 item from the basket, select and click <Remove item> <br>4. Once there's at least 1 item in the Basket, <CHECKOUT> becomes available<br>5. To checkout you need to have enough money in the 'wallet'<br>6. Receipt appears after checkout and automatically saved in the main folder")<br>
+show_downloads: false
 google_analytics:
 theme: jekyll-theme-minimal
